k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sans-webapp
spec:
  selector:
    matchLabels:
      app: sans-webapp
  template:
    metadata:
      labels:
        app: sans-webapp
    spec:
      containers:
        - name: sans-webapp-image
          image: ghcr.io/mhughdo/3s-webapp:GITHUB_SHA
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: '256Mi'
              cpu: '250m'
            limits:
              memory: '2Gi'
              cpu: "2500m"
