k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sans-webapp-svc
spec:
  selector:
    app: sans-webapp
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
