k8s/base/ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sans-ingress-route
  namespace: default
annotations:
  kubernetes.io/ingress.class: "traefik"
  cert-manager.io/cluster-issuer: letsencrypt-prod
  traefik.ingress.kubernetes.io/router.entrypoints: websecure
  traefik.frontend.redirect.entryPoint: https
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`{host:(www\.)?}sans.hughdo.dev`)
      kind: Rule
      services:
        - name: sans-webapp-svc
          port: 80
  tls:
    secretName: sans-cert
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: redirect-http-to-https
  namespace: default
annotations:
  kubernetes.io/ingress.class: "traefik"
  cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  entryPoints:
    - web
  routes:
    - match: HostRegexp(`{host:(www\.)?}sans.hughdo.dev`)
      kind: Rule
      services:
        - name: sans-webapp-svc
          port: 80
      middlewares:
        - name: https-only
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-only
spec:
  redirectScheme:
    scheme: https
    permanent: "true"
    port: 443
